[project]
name = "genai-project1"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchmetrics[image]>=1.9.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
